syntax = "proto3";

option go_package = "/genproto/reservation";

package reservation; 

service RestaurantService {
    rpc CreateRestaurant (CreateRestaurantRequest) returns (CreateRestaurantResponse);
    rpc GetRestaurant (GetRestaurantRequest) returns (GetRestaurantResponse);
    rpc UpdateRestaurant (UpdateRestaurantRequest) returns (UpdateRestaurantResponse);
    rpc DeleteRestaurant (DeleteRestaurantRequest) returns (DeleteRestaurantResponse);
    rpc ListRestaurants (ListRestaurantsRequest) returns (ListRestaurantsResponse);
}

// Restaurant message definition
message Restaurant {
    string id = 1;           
    string name = 2;
    string address = 3;
    string phone_number = 4;
    string description = 5;
    string created_at = 6;   
    string updated_at = 7;   
}

message CreateRestaurantRequest {
    Restaurant restaurant = 1;
}

message CreateRestaurantResponse {
    Restaurant restaurant = 1;
}

message GetRestaurantRequest {
    string id = 1; 
}

message GetRestaurantResponse {
    Restaurant restaurant = 1;
}

message UpdateRestaurantRequest {
    Restaurant restaurant = 1;
}

message UpdateRestaurantResponse {
    Restaurant restaurant = 1;
}

message DeleteRestaurantRequest {
    string id = 1; 
}

message DeleteRestaurantResponse {
    string message = 1;
}

message ListRestaurantsRequest {

    string name = 1;               
    string address = 2;           

    // Pagination
    int32 page = 3;                
    int32 limit = 4;              
}

message ListRestaurantsResponse {
    repeated Restaurant restaurants = 1;
}
